[package]
name = "screen-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atspi = { version = "0.15.0", features = ["tokio"] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tts = "0.25.5"
